added headers for android & ios

--- a/src/app/features/example-feature/components/home/home.component.html
+++ b/src/app/features/example-feature/components/home/home.component.html
@@ -1,3 +1,13 @@
-<p>
-  <strong>{{ 'PRESENTATION_TITLE' | translate }}</strong>
-</p>
+<ion-header [translucent]="true">
+  <ion-toolbar>
+    <ion-title>{{ "HOME_PAGE_TITLE" | translate }}</ion-title>
+  </ion-toolbar>
+</ion-header>
+
+<ion-content [fullscreen]="true">
+  <ion-header collapse="condense">
+    <ion-toolbar>
+      <ion-title size="large">{{ "HOME_PAGE_TITLE" | translate }}</ion-title>
+    </ion-toolbar>
+  </ion-header>
+</ion-content>
