--- a/src/global.scss
+++ b/src/global.scss
@@ -19,8 +19,16 @@
 @import "@ionic/angular/css/display.css";
 
 /* Optional CSS utils that can be commented out */
-@import "@ionic/angular/css/padding.css";
-@import "@ionic/angular/css/float-elements.css";
-@import "@ionic/angular/css/text-alignment.css";
-@import "@ionic/angular/css/text-transformation.css";
-@import "@ionic/angular/css/flex-utils.css";
+// @import "@ionic/angular/css/padding.css";
+// @import "@ionic/angular/css/float-elements.css";
+// @import "@ionic/angular/css/text-alignment.css";
+// @import "@ionic/angular/css/text-transformation.css";
+// @import "@ionic/angular/css/flex-utils.css";
+
+
+@import 'src/theme/base.scss';
+@import 'src/theme/sizing.scss';
+@import 'src/theme/layout.scss';
+@import 'src/theme/fonts.scss';
+@import 'src/theme/utilities.scss';
+@import 'src/theme/components.scss';
