Style: Update color codes

--- a/src/theme/components/button.scss
+++ b/src/theme/components/button.scss
@@ -2,7 +2,7 @@
 @import '../variables.scss';
 
 .btn {
-  --button-background: var(--color-primary-500);
+  --button-background: var(--ion-color-primary);
   --button-color: white;
 
   display: flex;
