--- a/src/theme/components/card.scss
+++ b/src/theme/components/card.scss
@@ -2,7 +2,7 @@
 @import '../variables.scss';
 
 .card {
-  --icon-color: var(--color-primary-500);
+  --icon-color: var(--ion-color-primary);
   --background-color: white;
   --background-image: '';
 
